Java 5 updates
Change-Id: I031ceedcc4f222d7b252f52ce80e185a501731e0